less/progress-bars.less
//
// Progress Bar
// --------------------------------------------------

// WebKit
@-webkit-keyframes progress-bar-stripes {
  from  { background-position: 0 0; }
  to    { background-position: 40px 0; }
}

// Spec and IE10+
@keyframes progress-bar-stripes {
  from  { background-position: 0 0; }
  to    { background-position: 40px 0; }
}

.progress {
  .box-shadow(inset 0 0 1px rgba(0, 0, 0, 0.25));
  &.progress-label-left, &.progress-label-top-right {
    overflow: visible;
    position: relative;
  }
  &.progress-label-left {
    margin-left: 40px;
  }
  &.progress-sm {
    height: @progress-sm;
    margin-bottom: @progress-sm;
  }
  &.progress-xs {
    height: @progress-xs;
    margin-bottom: @progress-xs;
  }
  td > &:first-child:last-child {
    margin-bottom: 0;
    margin-top: 3px;
  }
}

.progress-bar {
  box-shadow: none;
  .progress-label-left & span, .progress-label-top-right & span {
    color: @text-color;
    font-size: @font-size-large;
    position: absolute;
    text-align: right;
  }
  .progress-label-left & span {
    left: -40px;
    top: 0;
    width: 35px;
  }
  .progress-label-top-right & span {
    max-width: 25%;
    overflow: hidden;
    right: 0;
    text-overflow: ellipsis;
    top: -(@line-height-computed*1.5+1);
    white-space: nowrap;
  }
  .progress-label-left.progress-sm & span, .progress-label-top-right.progress-sm & span  {
    font-size: @font-size-base;
  }
  .progress-sm & {
    line-height: @progress-sm;
  }
  .progress-xs & {
    line-height: @progress-xs;
  }
}

.progress-description {
  margin-bottom: @line-height-computed/2;
  max-width: 74%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  .count {
    font-size: @font-size-base*1.667;
    font-weight: 300;
    line-height: 1;
    margin-right: 5px;
  }
  .fa, .pficon {
    margin-right: 3px;
  }
}

